--- a/.github/ISSUE_TEMPLATE/website-review.yml
+++ b/.github/ISSUE_TEMPLATE/website-review.yml
@@ -1,5 +1,5 @@
-name: "🌐 Website Review: HQ"
-description: "Share your thoughts and experiences with the HQ portfolio website!"
+name: "Website Review: HQ 🖤"
+description: "Share your thoughts and experiences with my portfolio website: HQ!"
 title: "[Review]: HQ Portfolio"
 labels: ["review", "feedback"]
 assignees:
