--- a/.github/ISSUE_TEMPLATE/website-review.yml
+++ b/.github/ISSUE_TEMPLATE/website-review.yml
@@ -8,7 +8,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        # 🌐 HQ Portfolio Review
+        #  HQ Portfolio Review 🦚
         Thank you for checking out my portfolio website!  
         Your feedback helps me improve the experience for future visitors.  
         Please answer the questions below to share your thoughts.
